nginx-dep.yaml
# Name: Brian Meta
# UCID: 30142390
# Course: ENSF 400
# Section: L01, B01
# Assignment 3

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-dep
spec:
  replicas: 5
  selector:
    matchLabels:
      app: nginx
  template:       
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:1.14.2
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-loadbalancer
              mountPath: /etc/nginx/conf.d
      volumes:
        - name: nginx-loadbalancer
          configMap:
            name: nginx-configmap
