app-1-ingress.yaml
# Name: Brian Meta
# UCID: 30142390
# Course: ENSF 400
# Section: L01, B01
# Assignment 3

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-1-ingress
spec:
  rules:
  - http:
      paths:
      - path: /app
        pathType: Prefix
        backend:
          service:
            name: app-1-svc
            port:
              number: 8080
