nginx-ingress.yaml
# Name: Brian Meta
# UCID: 30142390
# Course: ENSF 400
# Section: L01, B01
# Assignment 3

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-svc
            port:
              number: 80
